crates/qwik-optimizer-oxc/tests/snapshots/destructure_args_colon_props2.snap
---
source: crates/qwik-optimizer-oxc/tests/snapshot_tests.rs
expression: output
---
=== test.js ===
import { componentQrl } from "@qwik.dev/core";
import { qrl } from "@qwik.dev/core";
import { _jsxSorted } from "@qwik.dev/core";
import { _wrapProp } from "@qwik.dev/core";
const i_jN9ZUuuADmk = () => import("./test.tsx_default_component_jN9ZUuuADmk");
import { Fragment as _Fragment } from "@qwik.dev/core/jsx-runtime";
import { component$, useSignal } from "@qwik.dev/core";
export default /* @__PURE__ */ componentQrl(/* @__PURE__ */ qrl(i_jN9ZUuuADmk, "default_component_jN9ZUuuADmk"));

=== test.tsx_default_component_jN9ZUuuADmk.js === (ENTRY)
import { _jsxSorted } from "@qwik.dev/core";
import { _wrapProp } from "@qwik.dev/core";
import { Fragment as _Fragment } from "@qwik.dev/core/jsx-runtime";
export const default_component_jN9ZUuuADmk = (props) => {
	const { "bind:value": bindValue } = props;
	const test = useSignal(bindValue);
	return /* @__PURE__ */ _jsxSorted(_Fragment, null, null, _wrapProp(test), 3, "u6_0");
};
