crates/qwik-optimizer-oxc/tests/snapshots/destructure_args_colon_props3.snap
---
source: crates/qwik-optimizer-oxc/tests/test.rs
expression: output
---
=== INPUT ===
import { component$, useSignal } from "@qwik.dev/core";
export default component$((props) => {
  const { test, ...rest } = props;
  const test = useSignal(rest["bind:value"]);
  return <>{test.value}</>;
});

=== test.js ===
import { componentQrl } from "@qwik.dev/core";
import { qrl } from "@qwik.dev/core";
import { _jsxSorted } from "@qwik.dev/core";
import { _wrapProp } from "@qwik.dev/core";
const i_XXXXXXXXXXXX = () => import("./test.tsx_default_component_XXXXXXXXXXXX");
import { Fragment as _Fragment } from "@qwik.dev/core/jsx-runtime";
import { useSignal } from "@qwik.dev/core";
export default /* @__PURE__ */ componentQrl(
  /* @__PURE__ */ qrl(i_XXXXXXXXXXXX, "default_component_XXXXXXXXXXXX"),
);

=== test.tsx_default_component_XXXXXXXXXXXX.js === (ENTRY)
import { _jsxSorted } from "@qwik.dev/core";
import { _wrapProp } from "@qwik.dev/core";
import { Fragment as _Fragment } from "@qwik.dev/core/jsx-runtime";
import { useSignal } from "@qwik.dev/core";
export const default_component_XXXXXXXXXXXX = (props) => {
  const { test, ...rest } = props;
  const test = useSignal(rest["bind:value"]);
  return /* @__PURE__ */ _jsxSorted(_Fragment, null, null, _wrapProp(test), 3, "u6_0");
};

/*
{
  "origin": "test.tsx",
  "name": "default_component_XXXXXXXXXXXX",
  "entry": null,
  "displayName": "test.tsx_default_component",
  "hash": "XXXXXXXXXXXX",
  "canonicalFilename": "test.tsx_default_component_XXXXXXXXXXXX",
  "path": "",
  "extension": "js",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "component$",
  "captures": false
}
*/
