crates/qwik-optimizer-oxc/tests/snapshots/destructure_args_inline_cmp_block_stmt.snap
---
source: crates/qwik-optimizer-oxc/tests/test.rs
expression: output
---
=== INPUT ===
export default ({ data }: { data: any }) => {
  return (
    <div
      data-is-active={data.selectedOutputDetail === "options"}
      onClick$={() => {
        data.selectedOutputDetail = "options";
      }}
    />
  );
};

=== test.js ===
import { qrl } from "@qwik.dev/core";
import { _jsxSorted } from "@qwik.dev/core";
const i_Lo4b850Oi8I = () => import("./test.tsx_div_q_e_click_Lo4b850Oi8I");
export default ({ data }: {
	data: any;
}) => {
	return /* @__PURE__ */ _jsxSorted("div", { data-is-active: data.selectedOutputDetail === "options" }, { "q-e:click": /* @__PURE__ */ qrl(i_Lo4b850Oi8I, "div_q_e_click_Lo4b850Oi8I", [data]) }, null, 3, "u6_0");
};

=== test.tsx_div_q_e_click_Lo4b850Oi8I.js === (ENTRY)
import { _captures } from "@qwik.dev/core";
export const div_q_e_click_Lo4b850Oi8I = () => {
  const data = _captures[0];
  data.selectedOutputDetail = "options";
};

/*
{
  "origin": "test.tsx",
  "name": "div_q_e_click_Lo4b850Oi8I",
  "entry": null,
  "displayName": "test.tsx_div_q_e_click",
  "hash": "Lo4b850Oi8I",
  "canonicalFilename": "test.tsx_div_q_e_click_Lo4b850Oi8I",
  "path": "",
  "extension": "js",
  "parent": null,
  "ctxKind": "eventHandler",
  "ctxName": "onClick$",
  "captures": true,
  "captureNames": [
    "data"
  ]
}
*/
