crates/qwik-optimizer-oxc/tests/snapshots/destructure_args_inline_cmp_block_stmt2.snap
---
source: crates/qwik-optimizer-oxc/tests/test.rs
expression: output
---
=== INPUT ===
export default (props: { data: any }) => {
  const { data } = props;
  return (
    <div
      data-is-active={data.selectedOutputDetail === "options"}
      onClick$={() => {
        data.selectedOutputDetail = "options";
      }}
    />
  );
};

=== test.js ===
import { qrl } from "@qwik.dev/core";
import { _jsxSorted } from "@qwik.dev/core";
const i_XXXXXXXXXXXX = () => import("./test.tsx_div_q_e_click_XXXXXXXXXXXX");
export default (props: {
	data: any;
}) => {
	const { data } = props;
	return /* @__PURE__ */ _jsxSorted("div", { data-is-active: data.selectedOutputDetail === "options" }, { "q-e:click": /* @__PURE__ */ qrl(i_XXXXXXXXXXXX, "div_q_e_click_XXXXXXXXXXXX", [data]) }, null, 3, "u6_0");
};

=== test.tsx_div_q_e_click_XXXXXXXXXXXX.js === (ENTRY)
import { _captures } from "@qwik.dev/core";
export const div_q_e_click_XXXXXXXXXXXX = () => {
  const data = _captures[0];
  data.selectedOutputDetail = "options";
};

/*
{
  "origin": "test.tsx",
  "name": "div_q_e_click_XXXXXXXXXXXX",
  "entry": null,
  "displayName": "test.tsx_div_q_e_click",
  "hash": "XXXXXXXXXXXX",
  "canonicalFilename": "test.tsx_div_q_e_click_XXXXXXXXXXXX",
  "path": "",
  "extension": "js",
  "parent": null,
  "ctxKind": "eventHandler",
  "ctxName": "onClick$",
  "captures": true,
  "captureNames": [
    "data"
  ]
}
*/
