crates/qwik-optimizer-oxc/tests/snapshots/destructure_args_inline_cmp_expr_stmt.snap
---
source: crates/qwik-optimizer-oxc/tests/snapshot_tests.rs
expression: output
---
=== test.js ===
import { qrl } from "@qwik.dev/core";
import { _jsxSorted } from "@qwik.dev/core";
const i_Lo4b850Oi8I = () => import("./test.tsx_div_q_e_click_Lo4b850Oi8I");
export default ({ data }: {
	data: any;
}) => /* @__PURE__ */ _jsxSorted("div", { data-is-active: data.selectedOutputDetail === "options" }, { "q-e:click": /* @__PURE__ */ qrl(i_Lo4b850Oi8I, "div_q_e_click_Lo4b850Oi8I", [data]) }, null, 3, "u6_0");

=== test.tsx_div_q_e_click_Lo4b850Oi8I.js === (ENTRY)
import { _captures } from "@qwik.dev/core";
export const div_q_e_click_Lo4b850Oi8I = () => {
	const data = _captures[0];
	data.selectedOutputDetail = "options";
};
