crates/qwik-optimizer-oxc/tests/snapshots/example_11.snap
---
source: crates/qwik-optimizer-oxc/tests/test.rs
expression: output
---
=== INPUT ===
import { $, component$ } from "@qwik.dev/core";
import { foo, bar as bbar } from "../state";
import * as dep2 from "dep2";
import dep3 from "dep3/something";

export const Header = component$(() => {
  return (
    <Header onClick={$((ev) => dep3(ev))}>
      {dep2.stuff()}
      {bbar()}
    </Header>
  );
});

export const App = component$(() => {
  return <Header>{foo()}</Header>;
});

=== project/test.tsx ===
import { componentQrl } from "@qwik.dev/core";
import { qrl } from "@qwik.dev/core";
const i_XXXXXXXXXXXX = () => import("./project/test.tsx_Header_component_XXXXXXXXXXXX");
const i_XXXXXXXXXXXX = () => import("./project/test.tsx_Header_component___q_e_click_XXXXXXXXXXXX");
const i_XXXXXXXXXXXX = () => import("./project/test.tsx_App_component_XXXXXXXXXXXX");
import { foo, bar as bbar } from "../state";
import * as dep2 from "dep2";
import dep3 from "dep3/something";
export const Header = /* @__PURE__ */ componentQrl(
  /* @__PURE__ */ qrl(i_XXXXXXXXXXXX, "Header_component_XXXXXXXXXXXX"),
);
export const App = /* @__PURE__ */ componentQrl(
  /* @__PURE__ */ qrl(i_XXXXXXXXXXXX, "App_component_XXXXXXXXXXXX"),
);

=== project/test.tsx_Header_component_XXXXXXXXXXXX.tsx === (ENTRY)
import { qrl } from "@qwik.dev/core";
const i_XXXXXXXXXXXX = () => import("./project/test.tsx_Header_component___q_e_click_XXXXXXXXXXXX");
import * as dep2 from "dep2";
import { bar as bbar } from "../state";
import { Header } from "./test";
export const Header_component_XXXXXXXXXXXX = () => {
  return (
    <Header
      onClick={/* @__PURE__ */ qrl(i_XXXXXXXXXXXX, "Header_component___q_e_click_XXXXXXXXXXXX")}
    >
      {dep2.stuff()}
      {bbar()}
    </Header>
  );
};

/*
{
  "origin": "project/test.tsx",
  "name": "Header_component_XXXXXXXXXXXX",
  "entry": null,
  "displayName": "project/test.tsx_Header_component",
  "hash": "XXXXXXXXXXXX",
  "canonicalFilename": "project/test.tsx_Header_component_XXXXXXXXXXXX",
  "path": "",
  "extension": "tsx",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "component$",
  "captures": false
}
*/

=== project/test.tsx_Header_component___q_e_click_XXXXXXXXXXXX.tsx === (ENTRY)
import dep3 from "dep3/something";
export const Header_component___q_e_click_XXXXXXXXXXXX = (ev) => dep3(ev);

/*
{
  "origin": "project/test.tsx",
  "name": "Header_component___q_e_click_XXXXXXXXXXXX",
  "entry": null,
  "displayName": "project/test.tsx_Header_component___q_e_click",
  "hash": "XXXXXXXXXXXX",
  "canonicalFilename": "project/test.tsx_Header_component___q_e_click_XXXXXXXXXXXX",
  "path": "",
  "extension": "tsx",
  "parent": "project/test.tsx_Header_component",
  "ctxKind": "function",
  "ctxName": "$",
  "captures": false
}
*/

=== project/test.tsx_App_component_XXXXXXXXXXXX.tsx === (ENTRY)
import { foo } from "../state";
import { Header } from "./test";
export const App_component_XXXXXXXXXXXX = () => {
  return <Header>{foo()}</Header>;
};

/*
{
  "origin": "project/test.tsx",
  "name": "App_component_XXXXXXXXXXXX",
  "entry": null,
  "displayName": "project/test.tsx_App_component",
  "hash": "XXXXXXXXXXXX",
  "canonicalFilename": "project/test.tsx_App_component_XXXXXXXXXXXX",
  "path": "",
  "extension": "tsx",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "component$",
  "captures": false
}
*/
