crates/qwik-optimizer-oxc/tests/snapshots/example_2.snap
---
source: crates/qwik-optimizer-oxc/tests/test.rs
expression: output
---
=== INPUT ===
import { $, component$ } from "@qwik.dev/core";
export const Header = component$(() => {
  console.log("mount");
  return <div onClick={$((ctx) => console.log(ctx))} />;
});

=== test.tsx ===
import { componentQrl } from "@qwik.dev/core";
import { qrl } from "@qwik.dev/core";
const i_Qw9nV3mG0KQ = () => import("./test.tsx_Header_component_Qw9nV3mG0KQ");
const i_F0ShKNzNoIM = () => import("./test.tsx_Header_component_div_q_e_click_F0ShKNzNoIM");
export const Header = /* @__PURE__ */ componentQrl(/* @__PURE__ */ qrl(i_Qw9nV3mG0KQ, "Header_component_Qw9nV3mG0KQ"));

=== test.tsx_Header_component_Qw9nV3mG0KQ.tsx === (ENTRY)
import { qrl } from "@qwik.dev/core";
const i_F0ShKNzNoIM = () => import("./test.tsx_Header_component_div_q_e_click_F0ShKNzNoIM");
export const Header_component_Qw9nV3mG0KQ = () => {
	console.log("mount");
	return <div onClick={/* @__PURE__ */ qrl(i_F0ShKNzNoIM, "Header_component_div_q_e_click_F0ShKNzNoIM")} />;
}

/*
{
  "origin": "test.tsx",
  "name": "Header_component_Qw9nV3mG0KQ",
  "entry": null,
  "displayName": "test.tsx_Header_component",
  "hash": "Qw9nV3mG0KQ",
  "canonicalFilename": "test.tsx_Header_component_Qw9nV3mG0KQ",
  "path": "",
  "extension": "tsx",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "component$",
  "captures": false
}
*/

=== test.tsx_Header_component_div_q_e_click_F0ShKNzNoIM.tsx === (ENTRY)
export const Header_component_div_q_e_click_F0ShKNzNoIM = (ctx) => console.log(ctx);

/*
{
  "origin": "test.tsx",
  "name": "Header_component_div_q_e_click_F0ShKNzNoIM",
  "entry": null,
  "displayName": "test.tsx_Header_component_div_q_e_click",
  "hash": "F0ShKNzNoIM",
  "canonicalFilename": "test.tsx_Header_component_div_q_e_click_F0ShKNzNoIM",
  "path": "",
  "extension": "tsx",
  "parent": "test.tsx_Header_component",
  "ctxKind": "function",
  "ctxName": "$",
  "captures": false
}
*/
