crates/qwik-optimizer-oxc/tests/snapshots/example_4.snap
---
source: crates/qwik-optimizer-oxc/tests/snapshot_tests.rs
expression: output
---
=== test.tsx ===
import { componentQrl } from "@qwik.dev/core";
import { qrl } from "@qwik.dev/core";
const i_qy3PjUYD8N4 = () => import("./test.tsx_App_Header_component_qy3PjUYD8N4");
const i_t0GJ21qCHC0 = () => import("./test.tsx_App_Header_t0GJ21qCHC0");
export function App() {
	const Header = /* @__PURE__ */ componentQrl(/* @__PURE__ */ qrl(i_qy3PjUYD8N4, "App_Header_component_qy3PjUYD8N4"));
	return Header;
}

=== test.tsx_App_Header_component_qy3PjUYD8N4.tsx === (ENTRY)
import { qrl } from "@qwik.dev/core";
const i_t0GJ21qCHC0 = () => import("./test.tsx_App_Header_t0GJ21qCHC0");
export const App_Header_component_qy3PjUYD8N4 = () => {
	console.log("mount");
	return <div onClick={/* @__PURE__ */ qrl(i_t0GJ21qCHC0, "App_Header_t0GJ21qCHC0")} />;
}

=== test.tsx_App_Header_t0GJ21qCHC0.tsx === (ENTRY)
export const App_Header_t0GJ21qCHC0 = (ctx) => console.log(ctx);
